--- a/pages/subpages/home/search/index.wxml
+++ b/pages/subpages/home/search/index.wxml
@@ -30,19 +30,20 @@
 </view>
 
 <view class="history-keywords-wrap" wx:if="{{!isSearching}}" style="padding-top: {{statusBarHeight + 65}}px">
-  <view class="title row between" wx:if="{{historyKeywordsList.length}}">
+  <view class="title row between">
     <view>历史搜索</view>
-    <image class="delete-icon" src="https://img.ubo.vip/mp/selection/search/del-history.png" bindtap="clearHistoryKeywords" />
+    <image class="delete-icon" wx:if="{{historyKeywords.length}}" src="https://img.ubo.vip/mp/selection/search/del-history.png" bindtap="clearHistoryKeywords" />
   </view>
-  <view class="keywords-list">
+  <view class="keywords-list" wx:if="{{historyKeywords.length}}">
     <view 
       class="keywords" 
-      wx:for="{{historyKeywordsList}}" wx:key="index" 
+      wx:for="{{historyKeywords}}" wx:key="index" 
       bindtap="selectKeywords" data-keywords="{{item}}"
     >
       {{item}}
     </view>
   </view>
+  <empty-illus wx:if="{{!historyKeywords.length}}" desc="暂无历史搜索" />
 </view>
 
 <view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 0}}" style="padding-top: {{statusBarHeight + 104}}px">
