feat: 搜索关键字

--- a/pages/subpages/mall/goods/subpages/search/index.wxss
+++ b/pages/subpages/mall/goods/subpages/search/index.wxss
@@ -63,6 +63,9 @@
 .history-keywords-wrap {
   padding: 0 30rpx;
 }
+.hot-keywords-wrap {
+  padding: 30rpx;
+}
 .title {
   margin-bottom: 30rpx;
   color: #111;
