--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -8,11 +8,15 @@
 
 <view class="container">
   <swiper class="banner custom-dots" style="height: calc({{statusBarHeight + 44}}px + 250rpx);" autoplay indicator-dots circular>
-    <swiper-item class="banner-item">
-      <image class="banner-img" mode="widthFix" src="http://img.ubo.vip/youlian/temporary/banner.png" />
-    </swiper-item>
-    <swiper-item>
-      <image class="banner-img" mode="widthFix" src="http://img.ubo.vip/youlian/temporary/banner_1.png" />
+    <swiper-item 
+      class="banner-item" 
+      wx:for="{{bannerList}}"
+      wx:key="index"
+      bindtap="linkTo"
+      data-scene="{{item.scene}}"
+      data-param="{{item.param}}"
+    >
+      <image class="banner-img" mode="widthFix" src="{{ item.cover }}" />
     </swiper-item>
   </swiper>
   
