--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -184,13 +184,14 @@
       <view class="qa-item" wx:for="{{qaSummary.list}}" wx:key="index">
         <view class="qa-label">问</view>
         <view class="qa-question">{{ item.content }}</view>
-        <view class="first-answer" wx:if="{{index === 0}}">
+        <view class="first-answer" wx:if="{{index === 0 && item.firstAnswer}}">
           <view class="answer-user row">
             <image class="answer-user-avatar" src="{{item.firstAnswer.userInfo.avatar}}" />
             <view class="answer-user-name">{{item.firstAnswer.userInfo.nickname}}</view>
           </view>
           <view class="qa-answer omit single-line">{{item.firstAnswer.content}}</view>
         </view>
+        <view class="qa-no-answer" wx:if="{{index === 0 && !item.firstAnswer}}">暂无回答</view>
         <view class="qa-answers row" wx:if="{{index !== 0}}">
           <view class="qa-answers-avatars row" wx:if="{{item.answerNum}}">
             <image class="answer-user-avatar" wx:for="{{item.userList}}" wx:key="userIdx" wx:for-index="userIdx" wx:for-item="user" src="{{user.avatar}}" />
