--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxss
@@ -562,6 +562,11 @@
   color: #333;
   font-size: 22rpx;
 }
+.qa-no-answer {
+  margin-top: 12rpx;
+  color: #666;
+  font-size: 22rpx;
+}
 .qa-answers {
   margin-top: 12rpx;
 }
