--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -360,6 +360,11 @@
   color: #333;
   font-size: 22rpx;
 }
+.qa-no-answer {
+  margin-top: 12rpx;
+  color: #666;
+  font-size: 22rpx;
+}
 .qa-answers {
   margin-top: 12rpx;
 }
