--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxss
@@ -396,6 +396,11 @@
   margin-top: 18rpx;
   margin-left: 8rpx;
 }
+.qa-no-answer {
+  margin-top: 12rpx;
+  color: #666;
+  font-size: 22rpx;
+}
 .qa-answers-avatars {
   margin-left: 8rpx;
 }
