--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -62,6 +62,24 @@
     </view>
   </view>
 
+  <view class="comment-summary-wrap row between">
+    <view class="comment-summary row">
+      <view class="comment-user-avatar-wrap row">
+        <image class="comment-user-avatar" src="https://thirdwx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTKiakPc4hxfvs8nTgLkh3jhN6B8jP2oz5J9ar1HbPxQ1DV5kzKhQKTTuum4BaZ6EvgOspTaNDIkUQg/132" />
+        <image class="comment-user-avatar" src="https://thirdwx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTKiakPc4hxfvs8nTgLkh3jhN6B8jP2oz5J9ar1HbPxQ1DV5kzKhQKTTuum4BaZ6EvgOspTaNDIkUQg/132" />
+        <image class="comment-user-avatar" src="https://thirdwx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTKiakPc4hxfvs8nTgLkh3jhN6B8jP2oz5J9ar1HbPxQ1DV5kzKhQKTTuum4BaZ6EvgOspTaNDIkUQg/132" />
+        <image class="comment-user-avatar" src="https://thirdwx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTKiakPc4hxfvs8nTgLkh3jhN6B8jP2oz5J9ar1HbPxQ1DV5kzKhQKTTuum4BaZ6EvgOspTaNDIkUQg/132" />
+        <image class="comment-user-avatar" src="https://thirdwx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTKiakPc4hxfvs8nTgLkh3jhN6B8jP2oz5J9ar1HbPxQ1DV5kzKhQKTTuum4BaZ6EvgOspTaNDIkUQg/132" />
+      </view>
+      <view class="comment-num">22931评论</view>
+    </view>
+    <view class="goods-score-wrap row">
+      <view>商品评分</view>
+      <view class="goods-score">4.3</view>
+      <image class="choose-btn-icon" src="https://img.ubo.vip/mp/selection/goods-detail/to-icon.png" />
+    </view>
+  </view>
+
   <!-- 店铺信息 -->
   <shop-showcase wx:if="{{goodsInfo.shopInfo}}" shopInfo="{{goodsInfo.shopInfo}}" />
 
