--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -161,8 +161,8 @@
 .list-spec {
   margin: 18rpx 24rpx;
   padding: 0 24rpx;
-  height: 100rpx;
-  font-size: 28rpx;
+  height: 110rpx;
+  font-size: 26rpx;
   background: #fff;
   border-radius: 12rpx;
 }
@@ -189,12 +189,13 @@
 .comment-summary-wrap {
   margin: 18rpx 24rpx;
   padding: 0 24rpx;
-  height: 120rpx;
+  height: 110rpx;
   background: #fff;
   border-radius: 12rpx;
 }
 .comment-user-avatar-wrap {
   margin-left: 8rpx;
+  margin-right: 12rpx;
 }
 .comment-user-avatar {
   margin-left: -8rpx;
@@ -204,7 +205,6 @@
   border: 2rpx solid #fff;
 }
 .comment-num {
-  margin-left: 12rpx;
   color: #333;
   font-size: 26rpx;
   font-weight: 600;
