--- a/pages/subpages/mine/order-center/subpages/scenic-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/scenic-order-list/components/order-list/index.wxml
@@ -44,7 +44,7 @@
         <button 
           class="btn active" 
           wx:if="{{item.status === 301 || item.status === 302}}" 
-          catchtap="navToComment" data-id="{{item.id}}"
+          catchtap="navToEvaluation" data-id="{{item.id}}"
         >评价</button>
       </view>
     </view>
