--- a/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/evaluation/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/evaluation/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <view class="goods-list">
-    <view class="goods-item" wx:for="{{goodsInfoList}}" wx:key="index">
+    <view class="goods-item" wx:for="{{goodsList}}" wx:key="index">
       <image class="goods-image" src="{{item.image}}" />
       <view class="goods-info">
         <view class="goods-name">{{item.name}}</view>
@@ -9,7 +9,24 @@
     </view>
   </view>
 
-  <view class="evaluation-info-wrap"></view>
+  <view class="evaluation-info-wrap">
+    <view class="score-wrap row">
+      <view class="scroe-title">商品评分</view>
+      <van-rate value="{{score}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" />
+      <view class="score" wx:if="{{score}}">{{score}}</view>
+    </view>
+    <textarea class="evaluation-content" bindinput="setContent" placeholder="请输入您对商品的评价" />
+    <view>
+      <van-uploader 
+        file-list="{{imageList}}" 
+        bind:after-read="uploadImage" 
+        bind:delete="deleteImage" 
+        accept="image" 
+        max-count="10" 
+        deletable 
+      />
+    </view>
+  </view>
 </view>
 
-
+<view class="submit-btn">提交</view>
