--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/subpages/order-detail/index.wxml
@@ -74,7 +74,7 @@
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 401 || orderInfo.status === 402}}" 
-    bindtap="navToComment" data-id="{{orderInfo.id}}"
+    bindtap="navToEvaluation" data-id="{{orderInfo.id}}"
   >评价</button>
   <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系卖家' : '联系客服'}}</button>
 </view>
