--- a/pages/subpages/mine/order-center/subpages/set-meal-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/set-meal-order-list/subpages/order-detail/index.wxml
@@ -68,12 +68,12 @@
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 301 || orderInfo.status === 302}}" 
-    bindtap="navToComment" data-id="{{orderInfo.id}}"
+    bindtap="navToEvaluation" data-id="{{orderInfo.id}}"
   >评价</button>
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 301 || orderInfo.status === 302}}" 
-    bindtap="navToComment" data-id="{{orderInfo.id}}"
+    bindtap="navToEvaluation" data-id="{{orderInfo.id}}"
   >申请售后</button>
   <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系卖家' : '联系客服'}}</button>
 </view>
