--- a/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/order-detail/index.wxml
@@ -1,6 +1,5 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 <wxs module="ORDER" src="../../../../../utils/order.wxs" />
-
 <view class="container">
   <view class="card">
     <view class="card-header row">
@@ -27,7 +26,9 @@
     <view class="more-info-wrap">
       <view class="list row top">
         <view class="title">收货信息：</view>
-        <view class="content">{{orderInfo.consignee}}，{{orderInfo.mobile}}，{{orderInfo.address}}</view>
+        <view class="content">
+          {{orderInfo.consignee}}，{{orderInfo.mobile}}，{{orderInfo.address}}
+        </view>
       </view>
       <view class="list row between">
         <view class="title">订单编号：</view>
@@ -56,43 +57,23 @@
     </view>
   </view>
 </view>
-
 <view class="bottom-bar">
-  <button 
-    class="btn" 
-    wx:if="{{orderInfo.status === 301}}" 
-    bindtap="navToShipping" data-id="{{orderInfo.id}}"
-  >查看物流</button>
-  <button 
-    class="btn" 
-    wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104 || orderInfo.status === 401 || orderInfo.status === 402}}" 
-    bindtap="deleteOrder"
-  >删除订单</button>
-  <button 
-    class="btn" 
-    wx:if="{{orderInfo.status === 101}}" 
-    bindtap="cancelOrder"
-  >取消订单</button>
-  <button 
-    class="btn active"
-    wx:if="{{orderInfo.status === 301}}" 
-    bindtap="confirmOrder"
-  >确认收货</button>
-  <button 
-    class="btn active" 
-    wx:if="{{orderInfo.status === 101}}" 
-    bindtap="payOrder"
-  >继续付款</button>
-  <button 
-    class="btn active" 
-    wx:if="{{orderInfo.status === 201}}"
-    bindtap="refundOrder"
-  >申请退款</button>
-  <button 
-    class="btn active" 
-    wx:if="{{orderInfo.status === 401 || orderInfo.status === 402}}" 
-    bindtap="navToEvaluation"
-  >评价</button>
+  <button class="btn" wx:if="{{orderInfo.status === 301}}" bindtap="navToShipping" data-id="{{orderInfo.id}}">
+    查看物流
+  </button>
+  <button class="btn" wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104 || orderInfo.status === 401 || orderInfo.status === 402}}" bindtap="deleteOrder">
+    删除订单
+  </button>
+  <button class="btn" wx:if="{{orderInfo.status === 101}}" bindtap="cancelOrder">取消订单</button>
+  <button class="btn active" wx:if="{{orderInfo.status === 301}}" bindtap="confirmOrder">
+    确认收货
+  </button>
+  <button class="btn active" wx:if="{{orderInfo.status === 101}}" bindtap="payOrder">继续付款</button>
+  <button class="btn active" wx:if="{{orderInfo.status === 201}}" bindtap="refundOrder">
+    申请退款
+  </button>
+  <button class="btn active" wx:if="{{orderInfo.status === 401 || orderInfo.status === 402}}" bindtap="navToEvaluation">
+    评价
+  </button>
   <button class="btn active" bindtap="contact">{{orderInfo.shopId ? '联系卖家' : '联系客服'}}</button>
 </view>
-  
