--- a/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/evaluation/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/evaluation/index.wxml
@@ -29,4 +29,4 @@
   </view>
 </view>
 
-<view class="submit-btn row center">提交</view>
+<view class="submit-btn row center" bindtap="submit">提交</view>
