--- a/pages/subpages/mall/components/evaluation-item/index.wxml
+++ b/pages/subpages/mall/components/evaluation-item/index.wxml
@@ -1,6 +1,6 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
-<view class="comment-item">
+<view class="evaluation-item">
   <view class="user-info-wrap row">
     <image class="user-avatar" src="{{item.userInfo.avatar}}" />
     <view class="user-info">
@@ -8,12 +8,12 @@
       <view class="comment-date">{{TIME.timeDiff(item.createdAt)}}</view>
     </view>
     <view class="row">
-      <van-rate value="{{item.rate || 0}}" size="16" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
-      <view class="comment-rate">{{item.rate}}分</view>
+      <van-rate value="{{item.score || 0}}" size="16" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
+      <view class="comment-rate">{{item.score}}分</view>
     </view>
   </view>
   <view class="comment-content omit">{{item.content}}</view>
-  <view class="comment-images row between">
+  <view class="comment-images row between" wx:if="{{item.imageList.length}}">
     <image 
       class="comment-image" 
       wx:for="{{imageList}}" 
@@ -21,7 +21,10 @@
       wx:for-index="imageIndex" 
       wx:for-item="image" 
       src="{{image}}"
-      mode="aspectFill" 
+      bindtap="previewImage"
+      data-current="{{image}}"
+      mode="aspectFill"
+      lazy-load
     />
     <view class="more-image-tips row center">+{{item.imageList.length - 3}}</view>
   </view>
