--- a/pages/subpages/mall/components/evaluation-item/index.wxss
+++ b/pages/subpages/mall/components/evaluation-item/index.wxss
@@ -1,5 +1,5 @@
-.comment-item {
-  margin-top: 24rpx;
+.evaluation-item {
+  margin-bottom: 24rpx;
   padding: 24rpx;
   background: #fff;
   box-shadow: 0 0 12rpx 6rpx #f5f6f7;
