--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -62,12 +62,12 @@
     </view>
   </view>
 
-  <view class="comment-summary-wrap row between">
+  <view class="comment-summary-wrap row between" bindtap="checkEvaluationDetail">
     <view class="comment-summary row">
       <view class="comment-user-avatar-wrap row" wx:if="{{evaluationSummary.userList.length}}">
         <image class="comment-user-avatar" wx:for="{{evaluationSummary.userList}}" wx:key="index" src="{{ item.avatar }}" />
       </view>
-      <view class="comment-num">{{evaluationSummary.total ? evaluationSummary.total + '评论' : '暂无评论'}}</view>
+      <view class="comment-num">{{evaluationSummary.total ? evaluationSummary.total + '评价' : '暂无评价'}}</view>
     </view>
     <view class="goods-score-wrap row">
       <view wx:if="{{evaluationSummary.avgScore}}">商品评分</view>
