--- a/pages/subpages/mine/order-center/subpages/goods-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order-list/components/order-list/index.wxml
@@ -51,10 +51,9 @@
           wx:if="{{item.status === 201}}"
           catchtap="refundOrder" data-id="{{item.id}}" data-index="{{index}}"
         >申请退款</button>
-        <!-- wx:if="{{item.status === 401 || item.status === 402}}" -->
         <button 
           class="btn active" 
-           
+          wx:if="{{item.status === 401 || item.status === 402}}"
           catchtap="navToEvaluation" data-id="{{item.id}}" data-goods-list="{{item.goodsList}}"
         >评价</button>
       </view>
