--- a/pages/subpages/mine/utils/order.wxs
+++ b/pages/subpages/mine/utils/order.wxs
@@ -12,7 +12,7 @@ function statusDesc(status) {
     desc = '退款成功';
   } else if (status === 301) {
     desc = '待收货';
-  } else if (status === 401 || status === 402) {
+  } else if (status === 401 || status === 402 || status === 501) {
     desc = '交易成功';
   }
   return desc;
